--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding: 20px;
   width: 100%;
-  background: $lite-background;
+  background: $light-background;
   box-shadow: $box-shadow;
   border-radius: 0 0 $border-radius $border-radius;
 }
@@ -84,8 +84,8 @@
   box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
   border-radius: 5px;
   padding: 9px 20px;
-  background-color: $lite-background;
-  color: $lite-color;
+  background-color: $light-background;
+  color: $light-color;
   font-size: 18px;
   display: flex;
   align-items: center;
