--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -4,7 +4,7 @@
   padding: 20px;
   max-width: 400px;
   width: 100%;
-  background: $lite-background;
+  background: $light-background;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
 }
@@ -34,7 +34,7 @@
 
 .this__day_name {
   font-size: 40px;
-  color: $lite-color;
+  color: $light-color;
 }
 
 .this__time,
