--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -5,7 +5,7 @@
   padding: 40px;
   max-width: 750px;
   width: 100%;
-  background: $lite-background;
+  background: $light-background;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
 }
@@ -48,7 +48,7 @@
 }
 
 .indicator__value {
-  color: $lite-color;
+  color: $light-color;
 }
 
 .this__cloud {
