--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 /*colors*/
 $primary-color: #4793ff;
-$lite-color: #000;
-$lite-background: #fff;
+$light-color: #000;
+$light-background: #fff;
 $base-color: #939cb0;
 
 $box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
