add theme changer

--- a/src/shared/Popup/Popup.module.scss
+++ b/src/shared/Popup/Popup.module.scss
@@ -12,7 +12,7 @@
   padding: 40px;
   max-width: 750px;
   width: 100%;
-  background: $light-background;
+  background: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: $border-radius;
 }
@@ -58,7 +58,7 @@
   .day__name {
     font-size: 25px;
     line-height: 30px;
-    color: #000;
+    color: var(#{--text-color-default});
   }
 
   .day__icon {
