--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  position: relative;
+  background-color: var(#{--body-background-default});
 }
 
 .app {
