--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables";
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -20,11 +22,13 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 25px;
+  color: $primary-color;
 }
 
 .header__theme,
 .header__logo {
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .header__theme {
